--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="container">
 
     <h1>Promoção Especial de dias das mães!! </h1>
-    <p>Aproveite nossa oferta por tempo limitado!! 
+    <p>Aproveite nossa promoção antes que acabe!! Por tempo limitado!! 
       
-    Compre dois vestidos e concorra a um buquê lindo! </p>
+    Compre dois vestidos de nossa loja, por apenas R$240 e concorra a um lindo buquê de rosas para presentear e honrar a sua mãe ou alguém especial!</p>
     <img src="buque.jpeg aaaaa">  
       
     <p> Corra! A promoção acaba em:</p>
